fixed element size and button position

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,8 @@
         <section class="advantages">
             <div class="advantages__text">
                 <p class="advantages__text_title">Наши преимущества</p>
-                <p class="advantages__text_subtitle">Оптимизация мощностей (расходов, социальных выплат&nbsp;и&nbsp;т.п.)
+                <p class="advantages__text_subtitle">Оптимизация мощностей (расходов, социальных
+                    выплат&nbsp;и&nbsp;т.п.)
                     позволили компании на&nbsp;4,7% понизить цены по&nbsp;сравнению с&nbsp;конкурентами
                 </p>
                 <div class="firstscreen__more-details">
@@ -211,47 +212,48 @@
 
 
 
-                <div class="advantages__items">
-                    <div class="advantages__element">
-                        <div class="advantages__element_icon">
-                            <img class="advantages__element_img" src="<%=require('./images/card.svg')%>"/>
-                        </div>
-                        <p class="advantages__element_title">Самые выгодные и&nbsp;низкие цены</p>
-                        <p class="advantages__element_subtitle">В наличии широкий ассортимент,
-                             а&nbsp;также доступные цены на ноутбуки Dell
-                        </p>
+            <div class="advantages__items">
+                <div class="advantages__element">
+                    <div class="advantages__element_icon">
+                        <img class="advantages__element_img" src="<%=require('./images/card.svg')%>" />
                     </div>
-
-                    <div class="advantages__element">
-                        <div class="advantages__element_icon">
-                            <img class="advantages__element_img" src="<%=require('./images/advOk.svg')%>"/>
-                        </div>
-                        <p class="advantages__element_title">Авторизованный сервисный центр DELL</p>
-                        <p class="advantages__element_subtitle">Сертифицированный сервисный центр по&nbsp;ремонту техники Dell
-                             в&nbsp;России и&nbsp;странах&nbsp;СНГ
-                        </p>
-                    </div>
-
-                    <div class="advantages__element">
-                        <div class="advantages__element_icon">
-                            <img class="advantages__element_img" src="<%=require('./images/advPeople.svg')%>"/>
-                        </div>
-                        <p class="advantages__element_title">Высокий уровень технической экспертизы</p>
-                        <p class="advantages__element_subtitle">Мы&nbsp;прошли аттестацию в виде тестирования,
-                             где&nbsp;показали высокий уровень знаний
-                        </p>
-                    </div>
-
-                    <div class="advantages__element">
-                        <div class="advantages__element_icon">
-                            <img class="advantages__element_img" src="<%=require('./images/advCube.svg')%>"/>
-                        </div>
-                        <p class="advantages__element_title">Официальный партнер DELL</p>
-                        <p class="advantages__element_subtitle">Официальный поставщик продукции DELL в&nbsp;России
-                             и странах&nbsp;СНГ
-                        </p>
-                    </div>
+                    <p class="advantages__element_title">Самые выгодные и&nbsp;низкие цены</p>
+                    <p class="advantages__element_subtitle">В наличии широкий ассортимент,
+                        а&nbsp;также доступные цены на ноутбуки Dell
+                    </p>
                 </div>
+
+                <div class="advantages__element">
+                    <div class="advantages__element_icon">
+                        <img class="advantages__element_img" src="<%=require('./images/advOk.svg')%>" />
+                    </div>
+                    <p class="advantages__element_title">Авторизованный сервисный центр DELL</p>
+                    <p class="advantages__element_subtitle">Сертифицированный сервисный центр по&nbsp;ремонту техники
+                        Dell
+                        в&nbsp;России и&nbsp;странах&nbsp;СНГ
+                    </p>
+                </div>
+
+                <div class="advantages__element">
+                    <div class="advantages__element_icon">
+                        <img class="advantages__element_img" src="<%=require('./images/advPeople.svg')%>" />
+                    </div>
+                    <p class="advantages__element_title">Высокий уровень технической экспертизы</p>
+                    <p class="advantages__element_subtitle">Мы&nbsp;прошли аттестацию в виде тестирования,
+                        где&nbsp;показали высокий уровень знаний
+                    </p>
+                </div>
+
+                <div class="advantages__element">
+                    <div class="advantages__element_icon">
+                        <img class="advantages__element_img" src="<%=require('./images/advCube.svg')%>" />
+                    </div>
+                    <p class="advantages__element_title">Официальный партнер DELL</p>
+                    <p class="advantages__element_subtitle">Официальный поставщик продукции DELL в&nbsp;России
+                        и странах&nbsp;СНГ
+                    </p>
+                </div>
+            </div>
         </section>
 
         <section class="news">
@@ -259,21 +261,23 @@
                 <div class="news__text">
                     <p class="news__text_title">Последние новости</p>
                     <p class="news__text_subtitle">Вы можете посмотреть ещё больше интересных новостей и
-                         узнать о последних новинках, перейдя по кнопке
+                        узнать о последних новинках, перейдя по кнопке
                     </p>
                 </div>
-                <div class="firstscreen__more-details">
-                    <p class="firstscreen__more-details_text">Все новости</p>
-                    <div class="firstscreen__more-details_button">
-                        <img src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
-                    </div>                   
+                <div class="news__button">
+                    <div class="firstscreen__more-details">
+                        <p class="firstscreen__more-details_text">Все новости</p>
+                        <div class="firstscreen__more-details_button">
+                            <img src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="news__items">
                 <div class="news__element">
-                    <img class="news__element_img" src="<%=require('./images/Rectangle56.svg')%>"/>
-                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <img class="news__element_img" src="<%=require('./images/Rectangle56.svg')%>" />
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
                     <div class="news__element_button-box">
                         <div class="news__element_button">
                             <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
@@ -287,8 +291,8 @@
                     </div>
                 </div>
                 <div class="news__element">
-                    <img class="news__element_img" src="<%=require('./images/Rectangle2.svg')%>"/>
-                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <img class="news__element_img" src="<%=require('./images/Rectangle2.svg')%>" />
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
                     <div class="news__element_button-box">
                         <div class="news__element_button">
                             <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
@@ -302,8 +306,8 @@
                     </div>
                 </div>
                 <div class="news__element">
-                    <img class="news__element_img" src="<%=require('./images/Rectangle3.svg')%>"/>
-                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <img class="news__element_img" src="<%=require('./images/Rectangle3.svg')%>" />
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
                     <div class="news__element_button-box">
                         <div class="news__element_button">
                             <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
@@ -317,8 +321,8 @@
                     </div>
                 </div>
                 <div class="news__element">
-                    <img class="news__element_img" src="<%=require('./images/Rectangle4.svg')%>"/>
-                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <img class="news__element_img" src="<%=require('./images/Rectangle4.svg')%>" />
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
                     <div class="news__element_button-box">
                         <div class="news__element_button">
                             <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
@@ -332,8 +336,8 @@
                     </div>
                 </div>
                 <div class="news__element">
-                    <img class="news__element_img" src="<%=require('./images/Rectangle5.svg')%>"/>
-                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <img class="news__element_img" src="<%=require('./images/Rectangle5.svg')%>" />
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
                     <div class="news__element_button-box">
                         <div class="news__element_button">
                             <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
@@ -347,8 +351,8 @@
                     </div>
                 </div>
                 <div class="news__element">
-                    <img class="news__element_img" src="<%=require('./images/Rectangle6.svg')%>"/>
-                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>"/>
+                    <img class="news__element_img" src="<%=require('./images/Rectangle6.svg')%>" />
+                    <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
                     <div class="news__element_button-box">
                         <div class="news__element_button">
                             <img class="news__element_arrow" src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
@@ -361,7 +365,7 @@
                         <p class="news__element_month">июля</p>
                     </div>
                 </div>
-                
+
             </div>
 
         </section>
