added mobile v for news block

--- a/src/index.html
+++ b/src/index.html
@@ -255,7 +255,7 @@
                 </div>
             </div>
         </section>
-
+<!-- News -->
         <section class="news">
             <div class="news__container">
                 <div class="news__text">
@@ -284,7 +284,7 @@
                         </div>
                     </div>
                     <p class="news__element_title">GE использует технологии Dell</p>
-                    <p class="news__element_subtitle">Вы можете посмотреть ещё больше интересных</p>
+                    <p class="news__element_subtitle">Вы можете посмотреть ещё больше интересных новостей</p>
                     <div class="news__element_date">
                         <p class="news__element_number">11</p>
                         <p class="news__element_month">июля</p>
@@ -320,7 +320,7 @@
                         <p class="news__element_month">июля</p>
                     </div>
                 </div>
-                <div class="news__element">
+                <div class="news__element news__element_invisible">
                     <img class="news__element_img" src="<%=require('./images/Rectangle4.svg')%>" />
                     <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
                     <div class="news__element_button-box">
@@ -335,7 +335,7 @@
                         <p class="news__element_month">июля</p>
                     </div>
                 </div>
-                <div class="news__element">
+                <div class="news__element news__element_invisible">
                     <img class="news__element_img" src="<%=require('./images/Rectangle5.svg')%>" />
                     <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
                     <div class="news__element_button-box">
@@ -350,7 +350,7 @@
                         <p class="news__element_month">июля</p>
                     </div>
                 </div>
-                <div class="news__element">
+                <div class="news__element news__element_invisible">
                     <img class="news__element_img" src="<%=require('./images/Rectangle6.svg')%>" />
                     <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
                     <div class="news__element_button-box">
