added contacts in info block

--- a/src/index.html
+++ b/src/index.html
@@ -274,7 +274,9 @@
                 </div>
             </div>
 
-            <div class="news__items">
+
+            <!-- Попробовать успеть реализовать через js -->
+            <div class="news__items">                        
                 <div class="news__element">
                     <img class="news__element_img" src="<%=require('./images/Rectangle56.svg')%>" />
                     <img class="news__element_el" src="<%=require('./images/Vector33.svg')%>" />
@@ -364,6 +366,56 @@
                         <p class="news__element_number">11</p>
                         <p class="news__element_month">июля</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+<!-- Info -->
+        <section class="info">
+            <div class="info__background"> </div>
+            <div class="info__content">
+                <div class="info__contacts">
+                    <p class="info__contacts_title">Наши контакты</p>
+                    <p class="info__contacts_subtitle">Вы&nbsp;можете связаться с&nbsp;нашим онлайн-консультантом</p>
+                    <ul class="info__contacts_list">
+                        <li class="info__contacts_item">
+                            <div class="info__contacts_box">
+                                <img class="info__contacts_icon" src="<%=require('./images/location.svg')%>" alt="локация"/>
+                                <p class="info__contacts_name">Адрес</p>
+                            </div>                       
+                            <div class="info__contacts_container">
+                                <p class="info__contacts_content">Москва, ул. 3-я Хорошевская, дом 2, строение 1</p>
+                            </div>
+                        </li>
+                        <li class="info__contacts_item">
+                            <div class="info__contacts_box">
+                                <img class="info__contacts_icon" src="<%=require('./images/sms.svg')%>" alt="смс"/>
+                                <p class="info__contacts_name">E-mail</p>
+                            </div>                       
+                            <div class="info__contacts_container">
+                                <p class="info__contacts_content">dell_ru@gmail.com</p>
+                            </div>
+                        </li>
+                        <li class="info__contacts_item">
+                            <div class="info__contacts_box">
+                                <img class="info__contacts_icon" src="<%=require('./images/call-calling.svg')%>" alt="телефон"/>
+                                <p class="info__contacts_name">Адрес</p>
+                            </div>                       
+                            <div class="info__contacts_container">
+                                <p class="info__contacts_content">+7 495 737-06-01 </p>
+                                <p class="info__contacts_content">+7 495 737-06-01</p>
+                            </div>
+                        </li>
+                        <li class="info__contacts_item">
+                            <img class="info__contacts_social-network" src="<%=require('./images/social-network.svg')%>" alt="social-network"/>              
+                        </li>
+                    </ul>
+
+                </div>
+
+
+                <div class="info__application">
+
                 </div>
 
             </div>
