added mobile v for info block

--- a/src/index.html
+++ b/src/index.html
@@ -401,7 +401,7 @@
                             <div class="info__contacts_box">
                                 <img class="info__contacts_icon" src="<%=require('./images/call-calling.svg')%>"
                                     alt="телефон" />
-                                <p class="info__contacts_name">Адрес</p>
+                                <p class="info__contacts_name">Телефон</p>
                             </div>
                             <div class="info__contacts_container">
                                 <p class="info__contacts_content">+7 495 737-06-01 </p>
@@ -444,7 +444,8 @@
                         </div>
                     </form>
                 </div>
-                <img class="info__iphone" src="<%=require('./images/iPhone.png')%>" alt="iPhone-13-Pro-Max" />
+                <img class="info__iphone info__iphone_max" src="<%=require('./images/iPhone.png')%>" alt="iPhone-13-Pro-Max" />
+                <img class="info__iphone info__iphone_mini" src="<%=require('./images/iPhoneMini.svg')%>" alt="iPhone-13-Pro-Max" />
             </div>
 
         </section>
