--- a/src/index.html
+++ b/src/index.html
@@ -450,9 +450,91 @@
                 <img class="info__iphone info__iphone_max" src="<%=require('./images/iPhone.png')%>" alt="iPhone-13-Pro-Max" />
                 <img class="info__iphone info__iphone_mini" src="<%=require('./images/iPhoneMini.svg')%>" alt="iPhone-13-Pro-Max" />
             </div>
-
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer__up">
+            <img class="logo logo__footer" src="<%=require('./images/logo_test.svg')%>" alt="логотип" />
+
+            <nav class="footer__nav">
+                <div class="footer__item">
+                    <p class="footer__item_title">Каталог</p>
+                    <ul class="footer__item_list">
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Ноутбуки</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Персональные компьютеры</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Серверы</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Dell EMC</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Запасные части к Dell EMC</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <p class="footer__item_title">Личный кабинет</p>
+                    <ul class="footer__item_list">
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Профиль</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">История заказов</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">SMS-уведомления</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Избранное</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Сравнение товаров</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__item">
+                    <p class="footer__item_title">Помощь</p>
+                    <ul class="footer__item_list">
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Доставка и оплата</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Контакты</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">FAQ</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Наш АСЦ</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="footer__line"></div>
+        <div class="footer__down">
+            <div class="footer__item">
+                <p class="footer__down_title">Адрес</p>
+                <p class="footer__down_subtitle">Москва, ул. 3-я Хорошевская, дом 2, строение 1</p>
+            </div>
+            <div class="footer__item">
+                <p class="footer__down_title">Телефон</p>
+                <p class="footer__down_subtitle">+7 495 737-06-01, +7 495 737-06-01</p>
+            </div>
+            <div class="footer__item">
+                <p class="footer__down_title">E-mail</p>
+                <p class="footer__down_subtitle">dell_ru@gmail.com</p>
+            </div>
+            <img class="footer__social-network" src="<%=require('./images/social-network.svg')%>" alt="social-network" />
+
+        </div>
+
+    </footer>
 
 
 </body>
