added mobile v for footer

--- a/src/index.html
+++ b/src/index.html
@@ -455,21 +455,22 @@
     <footer class="footer">
         <div class="footer__up">
             <img class="logo logo__footer" src="<%=require('./images/logo_test.svg')%>" alt="логотип" />
+            <img class="logo logo__footer logo__footer_grey" src="<%=require('./images/Dell_Logo.svg')%>" alt="логотип" />
 
             <nav class="footer__nav">
-                <div class="footer__item">
+                <div class="footer__item footer__catalog">
                     <p class="footer__item_title">Каталог</p>
                     <ul class="footer__item_list">
-                        <li class="footer__item_element">
+                        <li class="footer__item_element footer__item_invisible">
                             <a class="footer__item_link">Ноутбуки</a>
                         </li>
                         <li class="footer__item_element">
                             <a class="footer__item_link">Персональные компьютеры</a>
                         </li>
-                        <li class="footer__item_element">
+                        <li class="footer__item_element footer__item_invisible">
                             <a class="footer__item_link">Серверы</a>
                         </li>
-                        <li class="footer__item_element">
+                        <li class="footer__item_element footer__item_invisible">
                             <a class="footer__item_link">Dell EMC</a>
                         </li>
                         <li class="footer__item_element">
@@ -477,7 +478,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer__item">
+                <div class="footer__item footer__personal">
                     <p class="footer__item_title">Личный кабинет</p>
                     <ul class="footer__item_list">
                         <li class="footer__item_element">
@@ -497,7 +498,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="footer__item">
+                <div class="footer__item footer__help">
                     <p class="footer__item_title">Помощь</p>
                     <ul class="footer__item_list">
                         <li class="footer__item_element">
@@ -511,6 +512,19 @@
                         </li>
                         <li class="footer__item_element">
                             <a class="footer__item_link">Наш АСЦ</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__item footer__addition">
+                    <ul class="footer__item_list">
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Ноутбуки</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Серверы</a>
+                        </li>
+                        <li class="footer__item_element">
+                            <a class="footer__item_link">Dell EMC</a>
                         </li>
                     </ul>
                 </div>
