fixed margin btw blocks

--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="firstscreen__main_container">
                     <p class="firstscreen__main_subtitle">Новое поступление</p>
-                    <p class="firstscreen__main_title">Лучшие товары от компании Dell</p>
+                    <p class="firstscreen__main_title">Лучшие товары от&nbsp;компании Dell</p>
                     <div class="firstscreen__more-details">
                         <div class="firstscreen__more-details_button">
                             <img src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
@@ -265,11 +265,11 @@
                     </p>
                 </div>
                 <div class="news__button">
-                    <div class="firstscreen__more-details">
-                        <p class="firstscreen__more-details_text">Все новости</p>
+                    <div class="firstscreen__more-details">                      
                         <div class="firstscreen__more-details_button">
                             <img src="<%=require('./images/strelka.svg')%>" alt="стрелка" />
                         </div>
+                        <p class="firstscreen__more-details_text">Все новости</p>
                     </div>
                 </div>
             </div>
